# Postware

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: app-flow.md  bdd (1).md  bdd.md  design.md  implementation_plan.md  overview.txt  prd.md  technical-architecture.md
src/postware/: __init__.py  config.py  generator.py  history.py  models.py  prompts.py
